Fixed consecutive block spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,8 +19,13 @@
 		@apply py-8 bg-cu-black-50;
 	}
 
+	.cu-block-gray + .cu-block-gray,
+	.cu-block-white + .cu-block-white {
+		@apply pt-0;
+	}
+
 	.cu-container-spacing {
-		@apply px-6 mx-auto bg-cu-black-200 md:px-8;
+		@apply px-6 mx-auto md:px-8;
 	}
 
 	.cu-container-1280 {
@@ -60,6 +65,6 @@
 	}
 
 	.cu-panel {
-		@apply [&:not(:last-child)]:mb-6;
+		@apply border border-cu-black-300 [&:not(:last-child)]:mb-6;
 	}
 }
